Fixed gradient-text wrapping issue in Safari

--- a/public/global.css
+++ b/public/global.css
@@ -59,6 +59,8 @@ a {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
 }
 
 /* Mobile */
